samples/_failures_safe/1761334838_df8ddc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b689a5b8.c: In function ‘kruskal_mst’:
./samples/SAFE/__tmp_b689a5b8.c:139:22: error: expected ‘;’ at end of input
  139 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_b689a5b8.c:139:5: error: expected declaration or statement at end of input
  139 |     for (int i = 0; i
      |     ^~~
